# internal/models/billing_profile_link.go
@@ -4,7 +4,7 @@ package models
 type BillingProfileLink struct {
 	ID        uint `json:"id" gorm:"primarykey"`
 	BillingID uint `json:"t_billing_id" gorm:"column:t_billing_id"`
-	ProfileID uint `json:"user_id" gorm:"column:user_id"` // Note: column name is user_id but should be profile_id
+	ProfileID uint `json:"user_id" gorm:"column:user_id"`
 }
 
 // TableName sets the insert table name for BillingProfileLink
